<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ The main contributor to this project is Institute of Materials Research,
  ~ Helmholtz-Zentrum Geesthacht,
  ~ Germany.
  ~
  ~ This project is a contribution of the Helmholtz Association Centres and
  ~ Technische Universitaet Muenchen to the ESS Design Update Phase.
  ~
  ~ The project's funding reference is FKZ05E11CG1.
  ~
  ~ Copyright (c) 2012. Institute of Materials Research,
  ~ Helmholtz-Zentrum Geesthacht,
  ~ Germany.
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <tomcat.version>7.0.77</tomcat.version>
        <slf4j-api.version>1.7.5</slf4j-api.version>
        <bitbucket.repo.name>preexperimentdatacollector</bitbucket.repo.name>
    </properties>

    <groupId>hzg.wpn</groupId>
    <artifactId>PreExperimentDataCollector</artifactId>
    <description>This project is dedicated to implement web interface. This web interface is used by the experiment
        users. Prior the experiment the users have to fill out the form. In this form there are several fields that
        describes the ongoing experiment (samples, purposes etc.)
    </description>
    <version>4.0.12-SNAPSHOT</version>

    <packaging>war</packaging>

    <scm>
        <connection>scm:hg:https://bitbucket.org/hzgwpn/PreExperimentDataCollector/PreExperimentDataCollector</connection>
        <developerConnection>scm:hg:ssh://hg@bitbucket.org/hzgwpn/PreExperimentDataCollector</developerConnection>
        <url>ssh://hg@bitbucket.org/hzgwpn/PreExperimentDataCollector/PreExperimentDataCollector</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>bintray-hzg</id>
            <url>https://api.bintray.com/maven/hzgde/hzg-wpn-projects/PreExperimentDataCollector/;publish=1</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.hzg.wpi.tango</groupId>
                <artifactId>tango-server-bom</artifactId>
                <version>17</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-core</artifactId>
            <version>${tomcat.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-logging-log4j</artifactId>
            <version>${tomcat.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
            <version>${tomcat.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.webdriver</groupId>
            <artifactId>webdriver-selenium</artifactId>
            <version>0.9.7376</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>2.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.webdriver</groupId>
            <artifactId>webdriver-firefox</artifactId>
            <version>0.9.7376</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.webdriver</groupId>
            <artifactId>webdriver-htmlunit</artifactId>
            <version>0.9.7376</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- this dependency is needed only in cases when BeamtimeLoginModule is used in TomCat for users authentication -->
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-catalina</artifactId>
            <version>${tomcat.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.2.2</version>
        </dependency>
        <!-- delete obsolete commons dependency: collection etc -->
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>hzg.wpn</groupId>
            <artifactId>utils</artifactId>
        </dependency>
        <dependency>
            <groupId>org.tango-controls</groupId>
            <artifactId>JTangoServer</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.ingvord</groupId>
            <artifactId>jmvc-backend</artifactId>
            <version>0.0.3</version>
        </dependency>
        <dependency>
            <groupId>de.hzg.wpi.utils</groupId>
            <artifactId>authorization</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.1.1</version>
        </dependency>
    </dependencies>
    <build>
        <finalName>PreExperimentDataCollector-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-etc</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/etc</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/etc</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <argLine>-Xmx1050m -XX:MaxPermSize=128M</argLine>
                    <excludes>
                        <exclude>**/IT*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>integration-test</phase>
                        <configuration>
                            <excludes>
                                <exclude>none</exclude>
                                <exclude>**/IT*</exclude>
                            </excludes>

                            <!-- temporary disable integration tests -->
                            <!--<includes>
                                <include>**/IT*</include>
                            </includes>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>generate-test-sources</id>
                        <!--<phase>package</phase>-->
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/test-integration/java</source>
                            </sources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-test-resources</id>
                        <!--<phase>package</phase>-->
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>add-test-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>src/test-integration/resources</directory>
                                </resource>
                                <resource>
                                    <directory>src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <skipAssembly>false</skipAssembly>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>hzg.wpn.tango.PreExperimentDataCollector</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>webapp.war</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>war</goal>
                        </goals>
                        <configuration>
                            <warName>ROOT</warName>
                            <warSourceDirectory>${project.basedir}/webapp</warSourceDirectory>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <webappDirectory>${project.build.directory}/ROOT</webappDirectory>
                            <packagingExcludes>
                                WEB-INF/lib/*,
                                WEB-INF/classes/*
                            </packagingExcludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <localCheckout>true</localCheckout>
                    <useReleaseProfile>true</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <executions>
                            <execution>
                                <id>deploy</id>
                                <phase>deploy</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>curl</executable>
                                    <arguments>
                                        <argument>-s</argument>
                                        <argument>-u</argument>
                                        <argument>ingvord:${bitbucket.ingvord.password}</argument>
                                        <argument>-X</argument>
                                        <argument>POST</argument>
                                        <argument>
                                            https://api.bitbucket.org/2.0/repositories/hzgwpn/${bitbucket.repo.name}/downloads
                                        </argument>
                                        <argument>-F</argument>
                                        <argument>
                                            files=@${project.build.directory}/${project.artifactId}-${project.version}.jar
                                        </argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>bintray-hzg</id>
            <url>http://dl.bintray.com/hzgde/hzg-wpn-projects</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>bintray-ingvord</id>
            <url>http://dl.bintray.com/ingvord/maven</url>
        </repository>
    </repositories>
</project>
